# fretcat

./: .ignore  Cargo.toml  Diagrama de Pacotes.drawio  Diagrama de classe.drawio  README.md  bundler.toml
.cargo/: config
crates/fretcat_audio/: Cargo.toml
crates/fretcat_audio/src/: chain.rs  effect.rs  lib.rs  overdrive.rs
crates/fretcat_common/: Cargo.toml
crates/fretcat_common/src/: lib.rs
crates/fretcat_derive/: Cargo.toml
crates/fretcat_derive/src/: control.rs  lib.rs
crates/fretcat_editor/: Cargo.toml
crates/fretcat_editor/css/: audio-slider.css  card-list.css  cards.css  channel-slider.css  editor.css  effect-handle.css  effect-list.css  labeled-knob.css  leftbar.css  list.css  main.css  message-system.css  mono-control.css  preset-control.css  preset-list.css  sidebar.css  top_bar.css  topbar.css
crates/fretcat_editor/editor_derive/: Cargo.toml
crates/fretcat_editor/editor_derive/src/: control.rs  lib.rs
crates/fretcat_editor/src/: assets.rs  card.rs  common.rs  editor.rs  effect_list.rs  effect_view.rs  keymap.rs  left_bar.rs  lib.rs  sidebar.rs  top_bar.rs
crates/fretcat_editor/src/components/: accordion.rs  audio_slider.rs  card.rs  card_list.rs  channel_slider.rs  effect_handle.rs  effect_list.rs  labeled_knob.rs  message_system.rs  mod.rs  mono_control.rs  preset_control.rs  preset_list.rs  sidebar.rs
crates/fretcat_editor/src/effects/: mod.rs  overdrive.css  overdrive.rs
crates/fretcat_editor/src/sidebar/: components_tab.rs  effect_tab.rs  presets_tab.rs
crates/fretcat_editor/src/systems/: card.rs  card_system.rs  message_system.rs
crates/fretcat_editor/src/views/: effect_view.rs  overdrive.css  overdrive.rs  top_bar.rs
crates/fretcat_effects/: Cargo.toml
crates/fretcat_effects/css/: fuzz.css  overdrive.css  studio-reverb.css
crates/fretcat_effects/effects_derive/: Cargo.toml
crates/fretcat_effects/effects_derive/src/: getter.rs  lib.rs  message.rs
crates/fretcat_effects/src/: chain.rs  effect.rs  fuzz.rs  lib.rs  overdrive.rs  preset.rs  tests.rs
crates/fretcat_effects/src/common/: allpass.rs  coeffs.rs  filter.rs  mod.rs  reverb.rs
crates/fretcat_effects/src/effects/: fuzz.rs  gain.rs  input_simulator.rs  mod.rs  noise_gate.rs  overdrive.rs  studioreverb.rs
crates/fretcat_macros/src/: effect_mapper.rs  getter.rs  lib.rs
crates/fretcat_plugin/: Cargo.toml
crates/fretcat_plugin/src/: lib.rs  params.rs
crates/fretcat_serialization/: Cargo.toml
crates/fretcat_serialization/src/: lib.rs  mapper.rs  tests.rs
crates/fretcat_tests/: Cargo.toml
crates/fretcat_tests/src/: lib.rs
diagrams/Structure/: Diagrama de Pacotes.drawio  Diagrama de classe.drawio
diagrams/UI/: Screen1-Presets.drawio  Screen1-Presets.html  Screen2-Effects.drawio  Screen2-Effects.drawio.html  UI-fretcat.drawio  UI-fretcat.drawio.html
fretcat_editor/: Cargo.toml
fretcat_editor/src/: common.rs  lib.rs
fretcat_editor/src/components/: audio_slider.rs  card_list.rs  effect_handle.rs  effect_list.rs  mod.rs  preset_control.rs  preset_list.rs  sidebar.rs
fretcat_editor/src/systems/: card.rs  message_system.rs  mod.rs  style_reloader.rs
fretcat_effects/: Cargo.toml
fretcat_effects/src/: chain.rs  effect_handle.rs  frame.rs  lib.rs  prelude.rs
fretcat_effects/src/common/: adsr.rs  allpass.rs  coeffs.rs  comb.rs  delay.rs  delayline.rs  filter.rs  iir_filter.rs  mod.rs  reverb.rs  svf_filter.rs
fretcat_effects/src/components/: graph.rs  labeled_knob.rs  mod.rs  named_knob.rs
fretcat_effects/src/effects/: bit_crusher.rs  fuzz.rs  gain.rs  input_simulator.rs  mod.rs  mono.rs  noise_gate.rs  overdrive.rs  studioreverb.rs
fretcat_effects/src/effects/delay/: delay.rs  mod.rs  twin_delay.rs
fretcat_effects/src/effects/distortion/: bit_crusher.rs  fuzz.rs  gain.rs  mod.rs  overdrive.rs
fretcat_effects/src/effects/dynamics/: auto_wah.rs  band_pass.rs  high_pass.rs  low_pass.rs  mod.rs  mono.rs  noise_gate.rs
fretcat_effects/src/effects/reverb/: mod.rs  studioreverb.rs
fretcat_macros/: Cargo.toml
fretcat_macros/src/: effect_mapper.rs  lib.rs  message.rs
fretcat_serialization/: Cargo.toml
fretcat_serialization/src/: lib.rs  mapper.rs
fretcat_styles/: Cargo.toml  build.rs  fretcat-styles.css
fretcat_styles/editor/: audio-slider.css  card-list.css  cards.css  editor.css  effect-handle.css  effect-list.css  graph.css  labeled-knob.css  message-system.css  mono-control.css  named-knob.css  preset-control.css  preset-list.css  sidebar.css
fretcat_styles/effects/: base-effect.css  bit-crusher.css  filter.css  fuzz.css  studio-reverb.css  twin-delay.css
fretcat_styles/src/: lib.rs
nih_plug/: Cargo.toml
nih_plug/baseview/: .rustfmt.toml  Cargo.toml
nih_plug/baseview/src/win/: drop_target.rs  hook.rs  window.rs
nih_plug/nih_plug_vizia/: Cargo.toml
nih_plug/src/: lib.rs
nih_plug/vizia/: Cargo.toml
nih_plug/vizia/crates/vizia_baseview/: Cargo.toml
nih_plug/vizia/crates/vizia_baseview/src/: application.rs  lib.rs
nih_plug/vizia/crates/vizia_core/src/context/: event.rs
nih_plug/vizia/src/: lib.rs
sandbox/: Cargo.toml
sandbox/.cargo/: config
sandbox/process/: Cargo.toml
sandbox/process/src/: lib.rs
sandbox/src/: main.rs
src/: chain.rs  default.css  editor.rs  effect.rs  effects.rs  lib.rs  params.rs  style.css  style.rs
src/editor/: common.rs  components.rs  editor.css  effect.rs  effect_view.rs  macros.rs  mod.rs  sidebar.rs  top_bar.rs  views.rs
src/editor/views/: effect_view.rs  overdrive.rs  sidebar.rs  top_bar.rs
src/effects/: chain.rs  common.rs  field.rs  macros.rs  mod.rs  overdrive.css  overdrive.rs  ui.rs
standalone/: Cargo.toml
standalone/src/: main.rs
