[package]
name = "fretcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["xtask", "standalone"]
exclude = ["sandbox"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "sandbox"
path = "sandbox/src/main.rs"

[dependencies]
fretcat_effects = {path = "./crates/fretcat_effects"}
fretcat_editor = {path = "./crates/fretcat_editor"}
fretcat_plugin = {path = "./crates/fretcat_plugin"}
fretcat_derive = {path = "./crates/fretcat_derive"}
fretcat_tests = {path = "./crates/fretcat_tests"}

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.dev.package."*"]
opt-level = 3
