[package]
name = "fretcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["xtask", "standalone", "crates/fretcat_editor", "crates/fretcat_effects", "crates/fretcat_plugin", "crates/fretcat_common", "crates/fretcat_common"]
exclude = ["sandbox"]

[dependencies]
fretcat_plugin = {path = "./crates/fretcat_plugin"}

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.dev.package."*"]
opt-level = 3
