[package]
name = "fretcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["xtask", "standalone", "fretcat_effects", "fretcat_editor", "fretcat_macros", "fretcat_serialization", "fretcat_styles", "nih_plug"]
exclude = ["crates/assets"]

[dependencies]
nih_plug = { git = "https://github.com/geom3trik/nih-plug.git", branch = "vizia-update", features = ["standalone", "assert_process_allocs"] }

fretcat_effects = {path = "fretcat_effects"}
fretcat_editor = {path = "fretcat_editor"}
fretcat_styles = {path = "fretcat_styles"}
fretcat_serialization = {path = "fretcat_serialization"}

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.dev.package."*"]
opt-level = 3
