[package]
name = "fretcat_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fretcat_effects = {path = "../fretcat_effects"}
fretcat_serialization = {path = "../fretcat_serialization"}
hot-lib-reloader = "0.6.5"

nih_plug = {path = "../nih_plug"}
strum = { version = "0.25.0", features = ["derive"]}
lazy_static = "1.4.0"