[package]
name = "fretcat_effects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
atomic_refcell = "0.1.10"
downcast-rs = "1.2.0"
dyn-clone = "1.0.12"
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }

fretcat_macros = {path = "../fretcat_macros"}

nih_plug = { git = "https://github.com/geom3trik/nih-plug.git", branch = "vizia-update", features = ["standalone", "assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/geom3trik/nih-plug.git", branch = "vizia-update" }
serde_json = "1.0.104"
erased-serde = "0.3.28"
serde = { version = "1.0.183", features = ["derive"] }
rayon = "1.7.0"
