[package]
name = "fretcat_effects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fretcat_macros = {path = "../fretcat_macros"}
fretcat_common = {path = "../fretcat_common"}

rand = "0.8.5"
atomic_refcell = "0.1.10"
downcast-rs = "1.2.0"
dyn-clone = "1.0.12"
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
serde = { version = "1.0.183", features = ["derive"] }