[package]
name = "fretcat_effects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simulate = ["hound"]

[dependencies]
fretcat_macros = {path = "../fretcat_macros"}

nih_plug = {path = "../../nih_plug"}
rand = "0.8.5"
atomic_refcell = "0.1.10"
downcast-rs = "1.2.0"
dyn-clone = "1.0.12"
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
serde = { version = "1.0.183", features = ["derive"] }
hound = {version = "3.5.1", optional = true} 
indexmap = { version = "2.0.2", features = ["serde"] }
