[package]
name = "fretcat_serialization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fretcat_macros = {path = "../fretcat_macros"}
fretcat_effects = {path = "../fretcat_effects"}
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
home = "0.5.5"
strum = { version = "0.25.0", features = ["derive"]}
lazy_static = "1.4.0"