[package]
name = "fretcat_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fretcat_effects = {path = "../fretcat_effects"}
fretcat_editor = {path = "../fretcat_editor"}
fretcat_plugin = {path = "../fretcat_plugin"}
fretcat_derive = {path = "../fretcat_derive"}