[package]
name = "nih_plug_vizia"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use VIZIA GUIs with NIH-plug"

[dependencies]
nih_plug = { git = "https://github.com/geom3trik/nih-plug.git", branch = "vizia-update", features = ["standalone", "assert_process_allocs"] }
nih_plug_assets = { git = "https://github.com/robbert-vdh/nih_plug_assets.git" }

baseview = { path = "../baseview"}
crossbeam = "0.8"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
# This fork contains some additional patches on top of Vizia to make it more
# suitable for use in NIH-plug. The set of patches constantly changes as things
# are merged into upstream Vizia. This also excludes the `embedded_fonts`
# feature.
# vizia = { git = "https://github.com/vizia/vizia", rev = "100502c33621c07be59eb218bab92e5f45b4e0c9", default_features = false, features = ["baseview", "clipboard", "x11"] }
vizia = { path = "../vizia", default_features = false, features = ["baseview", "clipboard", "x11"] }
# vizia = { path = "../../vizia", default_features = false, features = ["baseview", "clipboard", "x11"] }
