[package]
name = "vizia"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust GUI Framework"
autoexamples = false
rust-version = "1.60"

[features]
default = ["winit", "clipboard", "x11", "wayland", "embedded_fonts"]
clipboard = ["vizia_core/clipboard", "vizia_winit?/clipboard"]
serde = ["vizia_core/serde"]
winit = ["vizia_winit"]
baseview = ["vizia_baseview"]
x11 = ["vizia_winit?/x11", "vizia_core/x11"]
wayland = ["vizia_winit?/wayland", "vizia_core/wayland"]
embedded_fonts = ["vizia_core/embedded_fonts"]

[dependencies]
vizia_core = { version = "0.1.0", path = "crates/vizia_core"}
vizia_winit = { version = "0.1.0", path = "crates/vizia_winit", optional = true }
vizia_baseview = { version = "0.1.0", path = "crates/vizia_baseview", optional = true }

[dev-dependencies]
english-numbers = "0.3.3"
lazy_static = "1.4.0"
chrono = "0.4.19"
image = { version = "0.24.0", default-features = false, features = ["png"] }
reqwest = { version = "0.11.9", features = ["blocking"] }
instant = "0.1.12"
