[package]
name = "process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]

[profile.release]
opt-level = 3

[dependencies]
fundsp = "0.15.0"
hot-lib-reloader = "0.6.5"
rayon = "1.7.0"
ndarray = "0.15.6"
convolutions-rs = "0.3.4"
